syntax = "proto3";

option go_package = "washambi-rpc/laboof";

package laboof.v1;

import "google/protobuf/timestamp.proto";
// import "google/protobuf/empty.proto";

service Laboof {
  rpc KanbanCreate(KanbanCreateRequest) returns (KanbanCreateResponse);
}

message Kanban {
    string id = 1;
    string name = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4;
    google.protobuf.Timestamp deleted_at = 5;
}

message KanbanCreateRequest {
    string name = 1;
    string user_id = 2;
}

message KanbanCreateResponse {
    Kanban kanban = 1;
}
